@startuml

title __STORE's Class Diagram__\n

  namespace org.factcast.store.pgsql {
    namespace registry {
      namespace transformation {
        namespace store {
          abstract class org.factcast.store.pgsql.registry.transformation.store.AbstractTransformationStore {
              - executorService : ExecutorService
              - listeners : List<TransformationStoreListener>
              + register()
              + store()
              + unregister()
              {abstract} # doStore()
              # executorService()
          }
        }
      }
    }
  }
  

  namespace org.factcast.store.pgsql {
    namespace registry {
      namespace transformation {
        namespace store {
          class org.factcast.store.pgsql.registry.transformation.store.InMemTransformationStoreImpl {
              - id2hashMap : Map<String, String>
              - mutex : Object
              - transformationCache : Map<TransformationKey, List<Transformation>>
              + InMemTransformationStoreImpl()
              + contains()
              + get()
              # doStore()
          }
        }
      }
    }
  }
  

  namespace org.factcast.store.pgsql {
    namespace registry {
      namespace transformation {
        namespace store {
          class org.factcast.store.pgsql.registry.transformation.store.PgTransformationStoreImpl {
              - jdbcTemplate : JdbcTemplate
              + PgTransformationStoreImpl()
              + contains()
              + get()
              # doStore()
          }
        }
      }
    }
  }
  

  org.factcast.store.pgsql.registry.transformation.store.AbstractTransformationStore .up.|> org.factcast.store.pgsql.registry.transformation.TransformationStore
  org.factcast.store.pgsql.registry.transformation.store.InMemTransformationStoreImpl -up-|> org.factcast.store.pgsql.registry.transformation.store.AbstractTransformationStore
  org.factcast.store.pgsql.registry.transformation.store.InMemTransformationStoreImpl o-- org.factcast.store.pgsql.registry.metrics.RegistryMetrics : registryMetrics
  org.factcast.store.pgsql.registry.transformation.store.PgTransformationStoreImpl -up-|> org.factcast.store.pgsql.registry.transformation.store.AbstractTransformationStore
  org.factcast.store.pgsql.registry.transformation.store.PgTransformationStoreImpl o-- org.factcast.store.pgsql.registry.metrics.RegistryMetrics : registryMetrics


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
